tests/ui/c-variadic/trait-method.stderr
error: associated functions cannot have a C variable argument list
  --> $DIR/trait-method.rs:19:52
   |
LL |     unsafe extern "C" fn trait_associated_function(mut ap: ...) -> i32 {
   |                                                    ^^^^^^^^^^^

error: associated functions cannot have a C variable argument list
  --> $DIR/trait-method.rs:24:46
   |
LL |     unsafe extern "C" fn trait_method(&self, mut ap: ...) -> i32 {
   |                                              ^^^^^^^^^^^

error: aborting due to 2 previous errors

